# gcc-wrappers

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yml
gcc_wrappers/: run_from_zip.py
