[project]
name = "gcc-wrappers"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cookiecutter",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["gcc_wrappers*"]


[project.scripts]
gcc-lite = "gcc_wrappers.run_from_zip:run_lite_from_zip"